adding in some more stuff
list comprehensions mainly

--- a/data_introduction/basic_pandas.ipynb
+++ b/data_introduction/basic_pandas.ipynb
@@ -16,15 +16,15 @@
    ]
   },
   {
+   "source": [
+    "`imports`, you've seen this before!"
+   ],
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
-   },
-   "source": [
-    "`imports`, you've seen this before!"
-   ]
+   }
   },
   {
    "cell_type": "code",
@@ -64,9 +64,24 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "plt.rcParams['figure.figsize'] = (20, 10)"
+    "%matplotlib inline"
    ]
+  },
+  {
+   "source": [
+    "Set the size of the plots that will come out when we ask for them. Annoyingly, these are in inches. Whatever an \"inch\" is"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "plt.rcParams['figure.figsize'] = (20, 10)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
