Update instructions to include CPPD
Co-authored-by: Ben <notionparallax@users.noreply.github.com>
Co-authored-by: Hareem <h-nadeem@users.noreply.github.com>

--- a/maps/maps.ipynb
+++ b/maps/maps.ipynb
@@ -34,24 +34,28 @@
     }
    },
    "source": [
-    "If you are on windows, geopandas might not install properly, in which case, do this:\n",
+    "If you are on windows, geopandas is installed differently, so follow these 3 steps:\n",
     "\n",
-    "```\n",
-    "pip install wheel\n",
-    "pip install pipwin\n",
-    "pipwin install numpy\n",
-    "pipwin install pandas\n",
-    "pipwin install shapely\n",
-    "pipwin install gdal\n",
-    "pipwin install fiona\n",
-    "pipwin install pyproj\n",
-    "pipwin install six\n",
-    "pipwin install rtree\n",
-    "pipwin install descartes\n",
-    "pipwin install geopandas\n",
-    "```\n",
+    "1. Install Visual CPPD Build Tools with the following link: https://visualstudio.microsoft.com/visual-cpp-build-tools/\n",
+    "2. Restart your computer\n",
+    "3. Open Visual Studio Code again after the restart and copy and paste the following commands into your terminal:\n",
     "\n",
-    "Just copy that whole lot into your terminal and it'll sort it out."
+    "    ```\n",
+    "    pip install wheel\n",
+    "    pip install pipwin\n",
+    "    pip install numpy\n",
+    "    pip install pandas\n",
+    "    pip install shapely\n",
+    "    pip install pyproj\n",
+    "    pip install six\n",
+    "    pip install rtree\n",
+    "    pipwin install gdal\n",
+    "    pipwin install fiona\n",
+    "    pip install descartes\n",
+    "    pip install geopandas\n",
+    "    ```\n",
+    "\n",
+    "Copy that whole lot into your terminal, press enter, and it'll sort it out."
    ]
   },
   {
@@ -1112,11 +1116,8 @@
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
-  "interpreter": {
-   "hash": "40ee5a712841ee5c885aeb3d53ea493f5aa9908aee992e1447cc0ef07d45df00"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('course-env': venv)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1155,6 +1156,11 @@
    "toc_section_display": "block",
    "toc_window_display": false,
    "widenNotebook": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "cd1a4323fb379de9187160a9aa0337dabefd7009b5703fc03d0198e947213ff5"
+   }
   }
  },
  "nbformat": 4,
